src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>GWBase__Action_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this person should receive email action alerts</inlineHelpText>
        <label>Action Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Activist_Preferences__c</fullName>
        <label>Activist Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Attend Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Letter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set, mark all new opportunities for this Contact as anonymous.</inlineHelpText>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Bad_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Bad_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>total giving during the year shown in Best Gift Year</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__BoardMember__c</fullName>
        <label>Board Member</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Communication_Preference__c</fullName>
        <label>Communication Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Contact_Name_Last_First__c</fullName>
        <formula>LastName &amp; &quot;, &quot; &amp; FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name Last First</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Days_Since_First_Action_at_Level__c</fullName>
        <formula>TODAY() -  GWBase__First_Action_Date_Curr_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since First Action at Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this contact is deceased</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Do_Not_Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not trade, rent or otherwise share this person&apos;s contact information with third parties.</inlineHelpText>
        <label>Do Not Trade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Donor_This_Year__c</fullName>
        <description>yes/no formula</description>
        <formula>IF (   GWBase__OppAmountThisYear__c  &gt; 0 , &quot;Yes&quot; , &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor This Year?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Donor__c</fullName>
        <description>yes/no formula for display to profiles without permissions to view Opps</description>
        <formula>IF (   GWBase__TotalOppAmount__c  &gt; 0 , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays as Yes or No depending on whether this individual has ever made a donation or sponsorship.</inlineHelpText>
        <label>Donor?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Level_Numeric_After_Override__c</fullName>
        <formula>MAX (  GWBase__Engagement_Level_Override_Numeric__c ,  GWBase__Engagement_Level_Numeric__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Level Numeric After Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Level_Numeric__c</fullName>
        <description>set automatically by batch process</description>
        <label>Engagement Level Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Level_Override_Numeric__c</fullName>
        <formula>VALUE(LEFT(TEXT(GWBase__Engagement_Level_Override__c ),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement Level Override Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Level_Override__c</fullName>
        <inlineHelpText>This will increase the contact&apos;s engagement level, if this level is higher than what they would otherwise get based on their activity/donor history.  It cannot lower their level, only raise it.  It is effective until the override end date specified.</inlineHelpText>
        <label>Engagement Level Override</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Follower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Bridge Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Core Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Super-Supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Organizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Level__c</fullName>
        <description>set by batch process</description>
        <inlineHelpText>Current engagement level, automatically calculated.  If you want to manually change the level, do not attempt to change this field.  Instead, enter a value in Engagement Level Override.</inlineHelpText>
        <label>Engagement Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Observing</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Following</fullName>
                <color>#996633</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Endorsing</fullName>
                <color>#66CCCC</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Contributing</fullName>
                <color>#9999FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Owning</fullName>
                <color>#663366</color>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Leading</fullName>
                <color>#FF6666</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Levels_Below_Peak__c</fullName>
        <formula>GWBase__Engagement_Level_Numeric__c - GWBase__Engagement_Peak_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares current and peak level, indicates how many levels they have fallen off their peak.  If 0, means peak and current level are the same.</inlineHelpText>
        <label>Engagement Levels Below Peak</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Override_End_Date__c</fullName>
        <inlineHelpText>override specified is effective until this date</inlineHelpText>
        <label>Engagement Override End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Peak_Numeric__c</fullName>
        <description>set automatically by batch process</description>
        <label>Engagement Peak Numeric</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Peak__c</fullName>
        <inlineHelpText>The highest engagement level ever reached by this contact.

NOTE: This does not take into account any past overrides or formerly-checked checkboxes that affect engagement level.</inlineHelpText>
        <label>Engagement Peak</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Observing</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Following</fullName>
                <color>#996633</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Endorsing</fullName>
                <color>#66CCCC</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Contributing</fullName>
                <color>#9999FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Owning</fullName>
                <color>#663366</color>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Leading</fullName>
                <color>#FF6666</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__First_Action_Date_Curr_Level__c</fullName>
        <inlineHelpText>The date of the first action for this contact at their current Engagement Level.   i.e. the date the contact first &quot;graduated&quot; to the this level of engagement.</inlineHelpText>
        <label>First Action Date at Engagement Level</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Gender__c</fullName>
        <label>Gender</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Home_County__c</fullName>
        <label>Home County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__HouseholdGreeting__c</fullName>
        <formula>BLANKVALUE(GWBase__ONEN_Household__r.GWBase__Greeting__c, FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__HouseholdMembershipEndDate__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__MembershipEndDate__c</formula>
        <inlineHelpText>End date of the last membership for this person&apos;s household.</inlineHelpText>
        <label>Household Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__HouseholdMembershipJoinDate__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__MembershipJoinDate__c</formula>
        <inlineHelpText>Start date of the first membership for this person&apos;s household.</inlineHelpText>
        <label>Household Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__HouseholdName__c</fullName>
        <formula>BLANKVALUE(GWBase__ONEN_Household__r.Name, TRIM(TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName))</formula>
        <label>Household Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this person is no longer involved in any way, hasn&apos;t been for some time, and we don&apos;t expect them to get more involved.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Is_Org_Primary_Contact__c</fullName>
        <description>for use in reports, equals &quot;True&quot; if this contact is the primary con for the related acct</description>
        <formula>IF (  AND ( Account.GWBase__Primary_Contact__c =  Id , NOT ( Account.Name = &quot;Individual&quot; ) ) , &quot;True&quot; , &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Primary Contact?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Issue_Interest__c</fullName>
        <label>Issue Interest</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GWBase__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__LastCloseDateHH__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__LastCloseDate__c</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__LastCloseDate__c</fullName>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__LastMembershipDate__c</fullName>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__LastMembershipLevel__c</fullName>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__LastMembershipOrigin__c</fullName>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Last_Leadership_Action_Date__c</fullName>
        <inlineHelpText>Date of most recent action taken (may include donations if your org includes that in Engagement Level calculations)</inlineHelpText>
        <label>Last Engagement Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__MembershipEndDate__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Membership_Span__c</fullName>
        <formula>year(GWBase__MembershipEndDate__c ) - year(GWBase__MembershipJoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Membership_Status__c</fullName>
        <description>Note: Grace Period is determined in Opportunity &amp; Rollup Settings.</description>
        <formula>if (  GWBase__MembershipEndDate__c  &lt;today(), if ( GWBase__MembershipEndDate__c  &gt; ( TODAY() -  $Setup.GWBase__OppRollupSettings__c.GWBase__Membership_Grace_Period__c  ) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(GWBase__MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current, Expired, or Grace Period.</inlineHelpText>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__New_Donor_This_Year__c</fullName>
        <description>yes/no formula</description>
        <formula>IF (  AND (  GWBase__OppAmountThisYear__c  =  GWBase__TotalOppAmount__c   , GWBase__OppAmountThisYear__c &gt; 0 ) , &quot;Yes&quot; , &quot;No &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Donor This Year?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Newsletter_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check here to indicate that a person who would ordinarily get the newsletter should not get it.</inlineHelpText>
        <label>Newsletter Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__Not_in_HH_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this box, this contact will not be included in the household name. Use for children or other dependents.</inlineHelpText>
        <label>Not in Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GWBase__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__ONEN_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a lookup to the Contact&apos;s Household. If you want to change it, override the Household Name on this Household and it will show up here.</inlineHelpText>
        <label>Household</label>
        <referenceTo>GWBase__ONEN_Household__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmountLastNDaysHH__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__OppAmountLastNDays__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last 365 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last 365 Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmountLastYearHH__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__OppAmountLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmountThisYearHH__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__OppAmountThisYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last 365 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Override_Prospect_Level__c</fullName>
        <description>If Don&apos;t Override is chosen, then Prospect level field is calc&apos;d automatically in a formula using the total gift fields. If any other value is chosen, that value is used instead.</description>
        <inlineHelpText>Choose Do Not Override to allow Prospect Level to be calculated automatically. Choose any other value to set Prospect Level manually.</inlineHelpText>
        <label>Override Prospect Level</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Override</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address_Household_Greeting__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) || ( MailingStreet = &quot;&quot; &amp;&amp; MailingCity = &quot;&quot; &amp;&amp; MailingState = &quot;&quot; ), GWBase__HouseholdGreeting__c , FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Household Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address_Household_Name__c</fullName>
        <description>Equals Household Name if effective primary address is Home</description>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) || ( MailingStreet = &quot;&quot; &amp;&amp; MailingCity = &quot;&quot; &amp;&amp; MailingState = &quot;&quot; ),  GWBase__HouseholdName__c  , TRIM(FirstName &amp; &quot; &quot; &amp; LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Household Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address_Name_Block_HH__c</fullName>
        <formula>IF ( OR( ISPICKVAL(GWBase__Primary_Address__c ,&quot;Work&quot;), AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) ) , GWBase__Primary_Address_Name_Block__c , GWBase__HouseholdName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Name Block HH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address_Name_Block__c</fullName>
        <description>includes full contact name + Title &amp; org name where applicable</description>
        <formula>FirstName &amp; IF (  GWBase__Middle_Name__c  &lt;&gt; &quot;&quot; , &quot; &quot; &amp; GWBase__Middle_Name__c  , &quot;&quot; ) &amp; &quot; &quot; &amp; LastName  &amp;
IF (  GWBase__Primary_Address_Title__c  &lt;&gt; &quot;&quot; ,   BR()  &amp; GWBase__Primary_Address_Title__c , &quot;&quot; ) &amp;
IF (   GWBase__Primary_Address_Org_Name__c  &lt;&gt; &quot;&quot; ,  BR() &amp; GWBase__Primary_Address_Org_Name__c  , &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Name Block</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address_Org_Name__c</fullName>
        <description>Equal to the account name if and only if there is an account, and the effective primary address is Work.  (11/17/08 MMS)</description>
        <formula>IF ( OR( Account.Name = &quot;Individual&quot; , ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) ) , &quot;&quot; ,
IF ( OR( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) ,  ISPICKVAL( GWBase__Primary_Address__c, &quot;Work&quot; ) ), Account.Name , &quot;&quot; )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address_Title__c</fullName>
        <description>Equals title if and only if effective primary address is Work</description>
        <formula>IF ( Account.Name = &quot;Individual&quot; , &quot;&quot; , 
IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; , 
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) ,  Title  , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , &quot;&quot; , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , &quot;&quot; , Title   ) ) ) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Address__c</fullName>
        <inlineHelpText>Selecting Home makes the Home address the primary, selecting Work makes the Work Address the primary.</inlineHelpText>
        <label>Primary Address</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_City__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; ,
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , MailingCity , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , OtherCity , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , OtherCity, MailingCity ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary mailing City</inlineHelpText>
        <label>Primary City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Country__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; , 
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , MailingCountry , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , OtherCountry , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , OtherCountry , MailingCountry ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Country</inlineHelpText>
        <label>Primary Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_County__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; ,
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , GWBase__Work_County__c , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , GWBase__Home_County__c , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , GWBase__Home_County__c , GWBase__Work_County__c ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Postal_Code__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; ,
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , MailingPostalCode , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , OtherPostalCode , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , OtherPostalCode , MailingPostalCode ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Zip/Postal Code</inlineHelpText>
        <label>Primary Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_State_Province__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; ,
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , MailingState , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , OtherState , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , OtherState , MailingState ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary mailing State</inlineHelpText>
        <label>Primary State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Primary_Street__c</fullName>
        <formula>IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; ,
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , MailingStreet , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , OtherStreet , IF ( ISPICKVAL ( GWBase__Primary_Address__c, &quot;Home&quot; ) , OtherStreet, MailingStreet ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Street Address</inlineHelpText>
        <label>Primary Street</label>
        <type>Text</type>
    </fields>
</CustomObject>